# xrpl-ws

./: .gitignore  .mcp.json  Cargo.toml  LICENSE  Makefile  README.md  context7.json  rustfmt.toml
.github/workflows/: release.yml  rust.yml
docs/: API.md  architecture.md  asset-handling.md  coding-standards.md  development.md  resources.md  security.md  xrpl-skill.md
scripts/: fund_test_accounts.py  strip-std-traits.awk
src/: config.rs  connection.rs  error.rs  handle.rs  lib.rs  session.rs  socket.rs  time.rs  util.rs
src/request/: mod.rs
src/request/account_channels/: mod.rs
src/request/account_currencies/: mod.rs
src/request/account_info/: mod.rs
src/request/account_lines/: mod.rs
src/request/account_nfts/: mod.rs
src/request/account_objects/: mod.rs
src/request/account_offers/: mod.rs
src/request/account_tx/: mod.rs
src/request/amm_info/: mod.rs
src/request/book_offers/: mod.rs
src/request/fee/: mod.rs
src/request/ledger/: mod.rs
src/request/ledger_closed/: mod.rs
src/request/ledger_current/: mod.rs
src/request/ledger_data/: mod.rs
src/request/ledger_entry/: mod.rs
src/request/nft_buy_offers/: mod.rs
src/request/nft_sell_offers/: mod.rs
src/request/ripple_path_find/: mod.rs
src/request/server_info/: mod.rs
src/request/server_state/: mod.rs
src/request/submit/: mod.rs
src/request/submit_multisigned/: mod.rs
src/request/transaction_entry/: mod.rs
src/request/tx/: mod.rs
src/subscriptions/: account_tx.rs  book.rs  book_changes.rs  handle.rs  ledger.rs  mod.rs  transaction.rs
src/types/: account_flag.rs  account_object.rs  amm.rs  amount.rs  asset.rs  mod.rs  transaction.rs  transaction_meta.rs  validation.rs  xchain.rs
src/types/builders/: account_delete.rs  account_set.rs  amm_bid.rs  amm_clawback.rs  amm_create.rs  amm_delete.rs  amm_deposit.rs  amm_vote.rs  amm_withdraw.rs  check_cancel.rs  (+45 more)
tests/: account_channels.rs  account_currencies.rs  account_info.rs  account_lines.rs  account_nfts.rs  account_objects.rs  account_offers.rs  account_set.rs  account_tx.rs  account_tx_subscription.rs  amm_bid.rs  amm_create.rs  amm_delete.rs  amm_deposit.rs  amm_info.rs  book_changes_subscription.rs  book_offers.rs  book_subscription.rs  check_create.rs  common.rs  escrow_create.rs  fee.rs  ledger.rs  ledger_entry.rs  ledger_subscription.rs  mpt_issuance.rs  multi_sign.rs  multi_stream_subscription.rs  nft_offers.rs  nftoken_create_offer.rs  payment_channel_create.rs  ripple_path_find.rs  server_state.rs  transaction.rs  transaction_entry.rs  tx_subscription.rs
(+15 files in other folders)
