[package]
name = "xrpl-ws"
version = "0.1.0"
edition = "2024"
authors = ["Uwe Grawert"]
description = "Websocket client library for the XRP Ledger"
repository = "https://github.com/grawert/xrpl-ws"
license = "MIT"

[lib]
name = "xrpl"

[features]
jsondump = []

[dev-dependencies]
hex = "0.4"
sha2 = "0.10"
anyhow = "1.0"
serial_test = "3"
rippled_binary_codec = "0.0.5"
xrpl-keypairs = { git = "https://github.com/grawert/xrpl-keypairs-rust" }

[dependencies]
dashmap = "6.1"
thiserror = "1.0"

# runtime
tokio = { version = "1.26", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
futures-util = "0.3"

# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.0.0"
